# estudo-data-app

./: README.md  app.py  notas_alunos.csv  pyproject.toml
