[project]
name = "estudo-data-app"
version = "0.1.0"
description = ""
authors = [
    {name = "arturj9",email = "arturjardel9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
